[package]
authors = ["Chris Bruce <chris@chrisbruce.com>"]
description = "Rust wrappers around Helium blockchain services"
homepage = "https://github.com/chrisabruce/helium-rs"
include = ["src/**/*", "build.rs", "Cargo.toml", "LICENCE-APACHE.md", "LICENCE-MIT.md"]
license = "MIT/Apache-2.0"
name = "helium"
readme = "README.md"
repository = "https://github.com/chrisabruce/helium-rs.git"
version = "0.1.1"
edition = "2018"
publish = false

[dependencies]
reqwest = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
sodiumoxide = "0.2.2"
hex = "0.3.2"

[dependencies.bs58]
version = "0.2.4"
features = ["check", "sha2"]
