[package]
authors = ["Chris Bruce <chris@chrisbruce.com>"]
description = "Rust wrappers around Helium blockchain services"
homepage = "https://github.com/chrisabruce/helium-rs"
include = ["src/**/*", "Cargo.toml", "LICENCE-APACHE.md", "LICENCE-MIT.md"]
license = "MIT/Apache-2.0"
name = "helium"
readme = "README.md"
repository = "https://github.com/chrisabruce/helium-rs.git"
version = "0.2.1"
edition = "2018"
publish = false

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
chrono = "0.4.10"

