[package]
authors = ["Chris Bruce <chris@chrisbruce.com>"]
description = "Rust based client for Helium's API (blockchain-http)"
homepage = "https://github.com/chrisabruce/helium-rs"
include = ["src/**/*", "Cargo.toml", "../LICENCE-APACHE.md", "../LICENCE-MIT.md"]
license = "MIT/Apache-2.0"
name = "helium-client"
readme = "README.md"
repository = "https://github.com/chrisabruce/helium-rs.git"
version = "0.3.1"
edition = "2018"
publish = false

[dependencies]
helium = { path = "../helium"}

