[package]
authors = ["Chris Bruce <chris@chrisbruce.com>"]
description = "Rust based data structures representing the Helium models."
homepage = "https://github.com/chrisabruce/helium-rs"
include = ["src/**/*", "Cargo.toml", "../LICENCE-APACHE.md", "../LICENCE-MIT.md"]
license = "MIT/Apache-2.0"
name = "helium"
readme = "README.md"
repository = "https://github.com/chrisabruce/helium-rs.git"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"